--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-action": "^1.2.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "throttle-debounce": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
